Co-authored-by: Haroldinhoo <Haroldinhoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Let us cook</title>
 </head>
 <body>
+    <header></header>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
