--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Let us cook</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Let us cook</h1>
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="recettes.html">Recettes</a>
+            <a href="a_propos.html">À propos</a>
+        </nav>
+    </header>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
