Co-authored-by: Haroldinhoo <Haroldinhoo@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let us cook</title>
+    <title>LET US COOK</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <header>
-        <h1>Let us cook</h1>
+        <h1>LET US COOK</h1>
         <nav>
             <a href="index.html">Accueil</a>
             <a href="recettes.html">Recettes</a>
             <a href="a_propos.html">À propos</a>
+            <form class = "search" action="/search" method="get">
+                <input type="text" name="q" placeholder="Rechercher...">
+                <button type="submit">Rechercher</button>
+            </form>
         </nav>
     </header>
     <script src="./assets/js/script.js"></script>
