--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>nav bar</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
+    <script src="assets/js/script.js"></script>
 </head>
 
 <body>
@@ -27,13 +27,6 @@
             <li><a href="#" class="nav-links">About</a></li>
         </ul>
     </nav>
-    <script>
-        let mainNav = document.getElementById('main-nav');
-        let toggleNav = document.getElementById('toggle-nav');
-        toggleNav.addEventListener('click', function () {
-            mainNav.classList.toggle('active')
-        });
-    </script>
 </body>
 
 </html>
