--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="assets/Logo64x64.png" alt="logo" />
-        <h1>LOGO</h1>
+        <img src="assets/img/curry.jpg" alt="logo" />
+        <h1>Let US Cook</h1>
       </div>
       <ul>
         <li>
-          <a href="#">Home</a>
+          <a href="#">Accueil</a>
         </li>
         <li>
-          <a href="#">Services</a>
+          <a href="#">Recettes</a>
         </li>
         <li>
           <a href="#">Blog</a>
         </li>
         <li>
-          <a href="#">Contact Us</a>
+          <div class="recherche"><input type="text" placeholder="Search.."></div>
         </li>
       </ul>
       <div class="hamburger">
