--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
       </ul>
     </div>
 
-    <script src="script.js"></script>
+    <script src="assets/js/caroussel.js"></script>
   </body>
 </html>
