--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Responsive Navbar</title>
+    <title>Let US Cookr</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
           <a href="#">Recettes</a>
         </li>
         <li>
-          <a href="#">Blog</a>
+          <a href="#"></a>
         </li>
         <li>
           <div class="recherche"><input type="text" placeholder="Search.."></div>
