--- a/index.html
+++ b/index.html
@@ -57,19 +57,15 @@
   <div class="splide">
     <div class="splide__track">
       <ul class="splide__list">
-        <li class="splide__slide" style="background-color: #ff6347;">Slide 1</li>
-        <li class="splide__slide" style="background-color: #ffd700;">Slide 2</li>
-        <li class="splide__slide" style="background-color: #87ceeb;">Slide 3</li>
-        <li class="splide__slide" style="background-color: #90ee90;">Slide 4</li>
+        <li class="splide__slide"> <img src="assets//img/boisson.jpg" alt="Boisson"></li>
+        <li class="splide__slide"> <img src="assets//img/plat.jpg" alt="Plat"></li>
+        <li class="splide__slide"> <img src="assets//img/dessert.jpg" alt="Dessert"></li>
+        <li class="splide__slide"> <img src="assets//img/boisson.jpg" alt="Boisson"></li>
+
       </ul>
     </div>
   </div>
-  <button class="splide-arrow prev" aria-label="Previous">
-    &larr;
-  </button>
-  <button class="splide-arrow next" aria-label="Next">
-    &rarr;
-  </button>
+
 </div>
 
 <script src="https://unpkg.com/@splidejs/splide@3.0.9/dist/js/splide.min.js"></script>
