--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://unpkg.com/@splidejs/splide@3.0.9/dist/css/splide.min.css">
-    <title>JSCooking</title>
+    <title>Let US Cook</title>
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
@@ -52,7 +51,7 @@
     </div>
     <div class="espace"></div>
 
-    
+ <div class="carroussel">   
 <div class="splide-container">
   <div class="splide">
     <div class="splide__track">
@@ -60,14 +59,13 @@
         <li class="splide__slide"> <img src="assets//img/boisson.jpg" alt="Boisson"></li>
         <li class="splide__slide"> <img src="assets//img/plat.jpg" alt="Plat"></li>
         <li class="splide__slide"> <img src="assets//img/dessert.jpg" alt="Dessert"></li>
-        <li class="splide__slide"> <img src="assets//img/boisson.jpg" alt="Boisson"></li>
+        <li class="splide__slide"> <img src="assets//img/entrée.jpeg" alt="Boisson"></li>
 
       </ul>
     </div>
   </div>
-
 </div>
-
+</div>
 <script src="https://unpkg.com/@splidejs/splide@3.0.9/dist/js/splide.min.js"></script>
 <script>
   document.addEventListener('DOMContentLoaded', function () {
