--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     var splide = new Splide('.splide', {
       type: 'loop',
       padding: '5rem',
+      autoplay: true,
+      interval: 1000,
     });
 
     splide.mount();
