--- a/index.html
+++ b/index.html
@@ -67,17 +67,7 @@
 </div>
 </div>
 <script src="https://unpkg.com/@splidejs/splide@3.0.9/dist/js/splide.min.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    var splide = new Splide('.splide', {
-      type: 'loop',
-      padding: '5rem',
-      autoplay: true,
-      interval: 3000,
-    });
+<script src="assets/js/caroussel.js"></script>
 
-    splide.mount();
-  });
-</script>
   </body>
 </html>
