--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a href="#">Accueil</a>
         </li>
         <li>
-          <a href="#">Recettes</a>
+          <a href="recettes.html">Recettes</a>
         </li>
         <li>
           <a href="#"></a>
