--- a/recettes.html
+++ b/recettes.html
@@ -7,7 +7,31 @@
   <link rel="stylesheet" href="/assets/css/style.css"> <!-- Lien vers votre fichier CSS pour styliser la page -->
 </head>
 <body>
-
+    <nav>
+        <div class="logo">
+          <img src="assets/img/curry.jpg" alt="logo" />
+          <h1>Let US Cook</h1>
+        </div>
+        <ul>
+          <li>
+            <a href="#">Accueil</a>
+          </li>
+          <li>
+            <a href="recettes.html">Recettes</a>
+          </li>
+          <li>
+            <a href="#"></a>
+          </li>
+          <li>
+            <div class="recherche"><input type="text" placeholder="Search.."></div>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+        </div>
+      </nav>
 <header>
   <h1>Recettes</h1>
   <nav>
