--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
       <div class="logo">
-        <img src="assets/img/curry.jpg" alt="logo" />
+        <img src="assets/img/LUC.jpg" alt="logo" />
         <h1>Let US Cook</h1>
       </div>
       <ul>
@@ -33,24 +33,9 @@
         <span class="line"></span>
       </div>
     </nav>
-    <div class="menubar">
-      <ul>
-        <li>
-          <a href="#">Home</a>
-        </li>
-        <li>
-          <a href="#">Services</a>
-        </li>
-        <li>
-          <a href="#">Blog</a>
-        </li>
-        <li>
-          <a href="#">Contact Us</a>
-        </li>
-      </ul>
-    </div>
-    <div class="espace"></div>
-
+    <br>
+    <p>Bienvenue sur Let Us Cook ! Le site de répertoire de recettes.</p>
+    <p>Vous trouverez des recettes de tout types, bon appétit !</p>
  <div class="carroussel">   
 <div class="splide-container">
   <div class="splide">
