--- a/recettes.html
+++ b/recettes.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="logo">
-          <img src="assets/img/curry.jpg" alt="logo" />
+          <img src="assets/img/LUC.jpg" alt="logo" />
           <h1>Let US Cook</h1>
         </div>
         <ul>
@@ -38,7 +38,6 @@
     <ul>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="recettes.html" class="active">Recettes</a></li>
-      <li><a href="apropos.html">À propos</a></li>
       <!-- Ajoutez d'autres liens de navigation selon vos besoins -->
     </ul>
   </nav>
