--- a/recettes.html
+++ b/recettes.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recettes - Let Us Cook</title>
-  <link rel="stylesheet" href="/assets/css/style.css"> <!-- Lien vers votre fichier CSS pour styliser la page -->
+  <link rel="stylesheet" href="/assets/css/style.css"> 
 </head>
 <body>
     <nav>
@@ -39,7 +39,6 @@
       <li><a href="index.html">Accueil</a></li>
       <li><a href="recettes.html" class="active">Recettes</a></li>
       <li><a href="apropos.html">À propos</a></li>
-      <!-- Ajoutez d'autres liens de navigation selon vos besoins -->
     </ul>
   </nav>
 </header>
@@ -71,8 +70,6 @@
       <li>Servir immédiatement.</li>
     </ol>
   </section>
-
-  <!-- Ajoutez d'autres sections de recettes selon vos besoins -->
 </main>
 
 <footer>
