--- a/recettes.html
+++ b/recettes.html
@@ -14,7 +14,7 @@
         </div>
         <ul>
           <li>
-            <a href="#">Accueil</a>
+            <a href="index.html">Accueil</a>
           </li>
           <li>
             <a href="recettes.html">Recettes</a>
