--- a/recettes.html
+++ b/recettes.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recettes - Let Us Cook</title>
-  <link rel="stylesheet" href="/assets/css/style2.css"> 
+  <link rel="stylesheet" href="/assets/css/style2.css" /> 
 </head>
 <body>
     <nav>
