--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 </div>
 <script src="https://unpkg.com/@splidejs/splide@3.0.9/dist/js/splide.min.js"></script>
 <script src="assets/js/caroussel.js"></script>
+<script src="assets/js/script.js"></script>
 
   </body>
 </html>
