--- a/recettes.html
+++ b/recettes.html
@@ -20,17 +20,11 @@
             <a href="recettes.html">Recettes</a>
           </li>
           <li>
-            <a href="#"></a>
-          </li>
-          <li>
-            <div class="recherche"><input type="text" placeholder="Search.."></div>
+            <div><input type="text" id="searchInput" placeholder="Rechercher...">
+              <ul id="resultsList"></ul></div>
           </li>
         </ul>
-        <div class="hamburger">
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-        </div>
+
       </nav>
 <header>
   <h1>Recettes</h1>
@@ -38,36 +32,31 @@
 
 <main>
   <section class="recipe">
-    <h2>Riz au Curry</h2>
-    <img src="curry.jpg" alt="Riz au Curry">
-    <p>Un délicieux riz au curry avec du poulet grillé, de la laitue, des croûtons et une vinaigrette crémeuse.</p>
-    <ul>
-      <li>Temps de préparation : 15 minutes</li>
-      <li>Temps de cuisson : 15 minutes</li>
-      <li>Nombre de portions : 1</li>
-    </ul>
-    <h3>Ingrédients :</h3>
-    <ul>
-      <li>Riz</li>
-      <li>Laitue romaine</li>
-      <li>Croûtons</li>
-      <li>Parmesan râpé</li>
-      <li>Vinaigrette César</li>
-    </ul>
-    <h3>Instructions :</h3>
-    <ol>
-      <li>Faire griller les escalopes de poulet et les couper en morceaux.</li>
-      <li>Laver et déchiqueter la laitue.</li>
-      <li>Mélanger la laitue, le poulet grillé, les croûtons et le parmesan dans un grand bol.</li>
-      <li>Ajouter la vinaigrette César et bien mélanger.</li>
-      <li>Servir immédiatement.</li>
-    </ol>
+    <div id="filter-form">
+      <!-- Formulaire de filtrage -->
+      <label for="difficulty">Difficulté:</label>
+      <select id="difficulty">
+          <option value="Facile">Facile</option>
+          <option value="Moyen">Moyen</option>
+          <option value="Difficile">Difficile</option>
+      </select>
+      <button onclick="filterRecipes()">Filtrer par difficulté</button>
+  </div>
+  
+  <div id="filtered-recipes">
+      <!-- Les recettes filtrées seront affichées ici -->
+  </div>
+  <div id="recipe-details">
+      <!-- Détails de la recette en cours -->
+  </div>
   </section>
 </main>
 
 <footer>
   <p>&copy; 2024 Let Us Cook. Tous droits réservés.</p>
-</footer>
 
+</footer>
+<script src="assets/js/script.js"></script>
+<script src="assets/js/recherche.js"></script>
 </body>
 </html>
