--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           <a href="recettes.html">Recettes</a>
         </li>
         <li>
+          <a href="contact.html">A propos</a>
+        </li>
+        <li>
           <div><input type="text" id="searchInput" placeholder="Rechercher...">
             <ul id="resultsList"></ul></div>
         </li>
