rendu final manque css

--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,18 @@
     </div>
 
     <h3>Nos informations :</h3><br>
-    </p>
+    </p>DERVEAUX Alexis                          <br>
+    aderveaux@myges.fr | alexisdervax@gmail.com <br><br>
+    KANCEL Harold                                <br>
+    hkancel@myges.fr <br><br>
+    B1 ESGI
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
 
     <script src="./Assets/Js/API.js"></script>
 
