--- a/recettes.html
+++ b/recettes.html
@@ -30,9 +30,10 @@
 
       </nav>
 <header>
-  <h1>Recettes</h1>
+  <h1>Bienvenue sur la page recettes</h1>
 </header>
-
+<p>Vous trouverez ci-dessous une liste de nos recettes filtrées selon la difficultée. <br>
+  Cliquez dessus et vous aurez la liste des ingrédients nécessaires pour la faire. Bon appétit ! </p>
 <main>
   <section class="recipe">
     <div id="filter-form">
@@ -54,7 +55,12 @@
   </div>
   </section>
 </main>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <footer>
   <p>&copy; 2024 Let Us Cook. Tous droits réservés.</p>
 
