--- a/recettes.html
+++ b/recettes.html
@@ -66,6 +66,6 @@
 
 </footer>
 <script src="assets/js/script.js"></script>
-<script src="assets/js/recherche.js"></script>
+<script src="assets/js/recherchev2.js"></script>
 </body>
 </html>
