Co-authored-by: Haroldinhoo <Haroldinhoo@users.noreply.github.com>

--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,14 @@
             <div id="map" style="width: 600px; height: 400px;"></div>
     </div>
 
+    <div id="infos">
     <h3>Nos informations :</h3><br>
     </p>DERVEAUX Alexis                          <br>
     aderveaux@myges.fr | alexisdervax@gmail.com <br><br>
     KANCEL Harold                                <br>
     hkancel@myges.fr <br><br>
     B1 ESGI
+    </div>
     <br>
     <br>
     <br>
@@ -62,6 +64,7 @@
 
 
     <script src="./Assets/Js/API.js"></script>
+    <script src="assets/js/recherchev2.js"></script>
 
 
     <footer>
