--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
     <br>
 
 
-    <script src="./Assets/Js/API.js"></script>
+    <script src="assets/js/api.js"></script>
     <script src="assets/js/recherchev2.js"></script>
 
 
